# school_information_system

./: .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  README.md  manage.py  pyproject.toml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  production.py
requirements/: base.txt  local.txt
school_information_system/: conftest.py
school_information_system/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
school_information_system/templates/: base.html
school_information_system/templates/account/: signup.html
school_information_system/templates/users/: user_detail.html
school_information_system/users/: admin.py  apps.py  urls.py
school_information_system/users/migrations/: 0002_user_bio.py
school_information_system/users/tests/: factories.py  test_forms.py  test_models.py  test_urls.py  test_views.py
