[tool.poetry]
name = "school-information-system"
version = "0.1.0"
description = ""
authors = ["Eivind Teig <eivind.teig@gmail.com>"]
readme = "README.md"
packages = [{include = "school_information_system"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
werkzeug = "^2.2.3"
ipdb = "^0.13.11"
mypy = "^1.0.1"
django-stubs = "^1.15.0"
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"
django-test-plus = "^2.2.1"
flake8 = "^6.0.0"
coverage = "^7.2.1"
black = "^23.1.0"
pylint-django = "^2.5.3"
pre-commit = "^3.1.1"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.1"
django-coverage-plugin = "^3.0.0"
pytest-django = "^4.5.2"


[tool.poetry.group.dev.dependencies]
pytz = "^2022.7.1"
python-slugify = "^8.0.1"
pillow = "^9.4.0"
whitenoise = "^6.4.0"
unidecode = "^1.3.6"
django = "^4.1.7"
django-environ = "^0.10.0"
django-model-utils = "^4.3.1"
django-allauth = "^0.52.0"
django-crispy-forms = "^2.0"
django-autoslug = "^1.9.8"
werkzeug = "^2.2.3"
ipdb = "^0.13.11"
mypy = "^1.0.1"
django-stubs = "^1.15.0"
pytest = "^7.2.2"
pytest-sugar = "^0.9.6"
django-test-plus = "^2.2.1"
flake8 = "^6.0.0"
coverage = "^7.2.1"
black = "^23.1.0"
pylint-django = "^2.5.3"
pre-commit = "^3.1.1"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.8.1"
django-extensions = "^3.2.1"
django-coverage-plugin = "^3.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
